// Vitest Snapshot v1

exports[`fixtures:basic > Get contents index > basic-index-body 1`] = `
{
  "children": [
    {
      "children": [
        {
          "type": "text",
          "value": "Index",
        },
      ],
      "props": {
        "id": "index",
      },
      "tag": "h1",
      "type": "element",
    },
  ],
  "toc": {
    "depth": 2,
    "links": [],
    "searchDepth": 2,
    "title": "",
  },
  "type": "root",
}
`;

exports[`fixtures:basic > navigation > Get cats navigation > basic-navigation-cats 1`] = `
[
  {
    "$path": "/cats",
    "children": [
      {
        "$path": "/cats/bombay",
        "title": "Bombay",
      },
      {
        "$path": "/cats",
        "title": "Cats list",
      },
      {
        "$path": "/cats/persian",
        "title": "Persian",
      },
      {
        "$path": "/cats/ragdoll",
        "title": "Ragdoll",
      },
    ],
    "title": "Cats list",
  },
]
`;

exports[`fixtures:basic > navigation > Get dogs navigation > basic-navigation-dogs 1`] = `
[
  {
    "$path": "/dogs",
    "children": [
      {
        "$path": "/dogs/bulldog",
        "title": "Bulldog",
      },
      {
        "$path": "/dogs/german-shepherd",
        "title": "German Shepherd",
      },
    ],
    "icon": "🐶",
    "title": "Dogs List",
  },
]
`;

exports[`fixtures:basic > navigation > Get navigation > basic-navigation 1`] = `
[
  {
    "$path": "/cats",
    "children": [
      {
        "$path": "/cats/bombay",
        "title": "Bombay",
      },
      {
        "$path": "/cats",
        "title": "Cats list",
      },
      {
        "$path": "/cats/persian",
        "title": "Persian",
      },
      {
        "$path": "/cats/ragdoll",
        "title": "Ragdoll",
      },
    ],
    "title": "Cats list",
  },
  {
    "$path": "/dogs",
    "children": [
      {
        "$path": "/dogs/bulldog",
        "title": "Bulldog",
      },
      {
        "$path": "/dogs/german-shepherd",
        "title": "German Shepherd",
      },
    ],
    "icon": "🐶",
    "title": "Dogs List",
  },
  {
    "$path": "/",
    "children": [
      {
        "$path": "/",
        "title": "سلام",
      },
    ],
    "title": "سلام",
  },
  {
    "$path": "/",
    "children": [
      {
        "$path": "/",
        "title": "Index",
      },
    ],
    "title": "Index",
  },
]
`;
